--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "hf-transfer>=0.1.9,<0.2",
     "ollama>=0.5.2,<0.6",
     "vllm>=0.1.2,<0.2",
-    "dotenv>=0.9.9,<0.10",
+    "dotenv>=0.9.9,<0.10", "streamlit>=1.48.0,<2", "google-genai>=1.29.0,<2",
 ]
 
 [build-system]
