Enhance file management in Streamlit app with utility functions for file icons, sizes, and modification times; improve indexed files display.

--- a/.gitignore
+++ b/.gitignore
@@ -172,6 +172,9 @@ SOURCE_DOCUMENTS/.DS_Store
 sessions/
 static/images/
 uploaded_documents/
+uploaded_documents_streamlit/
+.byaldi_streamlit/
+sessions_streamlit/
 
 # pixi environments
 .pixi
