Refactor document retrieval in Streamlit app to support original image mapping; enhance sidebar UI for improved session management and user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,7 @@ SOURCE_DOCUMENTS/.DS_Store
 .byaldi/
 sessions/
 static/images/
+static/images_streamlit/
 uploaded_documents/
 uploaded_documents_streamlit/
 .byaldi_streamlit/
